fix center align

--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ ul.ul-edu {
 
 ul.ul-edu li {
   position: relative;
-  padding: 0px 15px 4px 3px
+  /* padding: 0px 15px 4px 3px */
 }
 
 ul.ul-edu li .description p {
